<resources>
    <string name="app_name">ConstrainLayout</string>
    <string name="singapore">Singapore</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="discard">Discard</string>
    <string name="description">Description</string>
    <string name="detail_description">①：実施時間につきましては、当日、人事部から随時各部門に連絡いたします。
感染症予防の面から、できる限り、呼び出しまでお待ちくださいますようよろしくお願いいたします。
②：事前に、問診票を配布いたします。
※ 問診票は、必ず、実施前までに、ご記入いただき、実施日に持参してください。
※ 問診票の本人記入欄（太枠内）は、すべて、ご記入をお願いします。
③：接種日当日は、体温を計ってから、ご出社ください。また、マスクの着用をお願いします。
④：出張等により、上記の実施日に接種できない方は、必ず人事部へ報告の上
　最寄りの病院で実施 いただき、各自精算（厚生費）を行ってください。
　経費コード→LCP：23400、LEG：83400、LEC：60190、LHD：52010
※ 上記実施日に出社されている方は、必ず、どちらかの日程で、会社で接種を受けてください。

不明点は　原（内線：699713）まで、ご連絡ください。
よろしくお願い致します。　人事部　原</string>
</resources>